--- a/src/app/logged/components/top-bar/top-bar.component.css
+++ b/src/app/logged/components/top-bar/top-bar.component.css
@@ -2,7 +2,7 @@
     position: fixed;
     top: 0;
     width: 100%;
-    height: 75px;
+    height: 4.5em;
     box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.10), 0 2px 10px 0 rgba(0, 0, 0, 0.10);
     background-color: rgba(255, 255, 255, 0.9);
     display: flex;
@@ -12,8 +12,8 @@
 }
 
 .top-img {
-    width: 4em;
-    height: 80%;
+    width: 3em;
+    height: 3em;
     padding: .2em;
     border-radius: 2em;
     margin: auto 1em;
@@ -25,9 +25,9 @@
 
 .button-exit {
     margin: auto .5em auto auto;
-    width: 2em;
-    height: 2em;
-    border-radius: 1em;
+    width: 1.5em;
+    height: 1.5em;
+    border-radius: .75em;
     border: none;
     font-size: 1.5em;
     background-color: transparent;
