--- a/src/app/not-logged/components/login/login.component.html
+++ b/src/app/not-logged/components/login/login.component.html
@@ -1,38 +1,31 @@
-<div class="container">
-    <div class="card card-login mx-auto mt-5">
-        <div class="card-header fondo text-center">
-            <h3>Ingresar</h3>
+<div class="row h-100 background" style="margin: auto">
+    <div class="card card-login mx-auto my-auto animate__animated animate__fadeIn animate__faster">
+        <div class=" card-header fondo text-center border-0 ">
+            <h2 class="title ">Ingresar</h2>
         </div>
-        <div class="card-body">
-            <!-- <form id="login-form" name="login-form"> -->
+        <div class="card-body ">
+            <form id="login-form " name="login-form ">
 
-            <div class="col_full">
-                <label for="login-form-username">Correo electrónico:</label>
-                <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text"><i class="fas fa-user"></i></span>
+                <div class="col_full ">
+                    <label for="login-form-username ">Correo electrónico:</label>
+                    <div class="input-group mb-3 ">
+                        <input type="email " class="form-control cajaTexto " required="true ">
                     </div>
-                    <input type="email" class="form-control" placeholder="Correo electrónico" required="true">
                 </div>
-            </div>
-            <br>
-            <div class="col_full">
-                <label for="login-form-password">Contraseña:</label>
-                <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text"><i class="fas fa-key"></i></span>
+                <div class="col_full ">
+                    <label for="login-form-password ">Contraseña:</label>
+                    <div class="input-group mb-3 ">
+                        <input type="password " class="form-control cajaTexto " required="true ">
                     </div>
-                    <input type="password" class="form-control" placeholder="Contraseña" required="true">
                 </div>
-            </div>
 
-            <div class="text-center">
-                <br>
-            </div>
-            <div class="text-center">
-                <button class="btn btn-primary button-login" (click)="entrar()">Entrar</button>
-            </div>
-            <!-- </form> -->
+                <div class="text-center ">
+
+                </div>
+                <div class="text-center ">
+                    <button class="btn btn-primary button-login ">Entrar</button>
+                </div>
+            </form>
         </div>
     </div>
 </div>
