--- a/src/app/logged/components/bottom-nav/bottom-nav.component.css
+++ b/src/app/logged/components/bottom-nav/bottom-nav.component.css
@@ -1,15 +1,25 @@
+.borde {
+    border: 1px solid red;
+}
+
 .nav {
     position: fixed;
     bottom: 0;
     width: 100%;
-    height: 55px;
+    height: 90px;
     box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.10), 0 2px 10px 0 rgba(0, 0, 0, 0.10);
     background-color: #ffffff;
     display: flex;
+    z-index: 3;
     overflow-x: auto;
 }
 
 .nav__link {
+    padding-bottom: 0.5em;
+    margin-right: 0.5em;
+    margin-left: 0.5em;
+    margin-top: 1em;
+    margin-bottom: 1em;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -17,23 +27,36 @@
     flex-grow: 1;
     min-width: 50px;
     overflow: hidden;
+    background-color: white;
     white-space: nowrap;
-    font-family: sans-serif;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
     font-size: 13px;
-    color: #444444;
+    color: #061058;
     text-decoration: none;
     -webkit-tap-highlight-color: transparent;
-    transition: background-color 0.1s ease-in-out;
+    transition: 0.2s ease-in-out;
+    border-radius: 1.2em;
 }
 
 .nav__link:hover {
-    background-color: #eeeeee;
+    color: white;
+    background-color: #0000AF;
 }
 
 .active {
-    color: #a30013;
+    color: white;
+    background-color: #0000AF;
 }
 
 .nav-icon {
+    border: none;
+    outline: none;
     font-size: 18px;
+}
+
+.nav-icon-active {
+    border: none;
+    outline: none;
+    font-size: 22px;
 }
