--- a/src/app/logged/components/main-screen/main-screen.component.css
+++ b/src/app/logged/components/main-screen/main-screen.component.css
@@ -1,10 +1,51 @@
-.card-servicio {
-    border: none;
-    box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.05), 0 2px 10px 0 rgba(0, 0, 0, 0.05);
-    color: white;
-    border-radius: 1em;
+.background {
+    padding-top: 55px;
+    padding-bottom: 920px;
+    background: rgb(202, 217, 243);
+    background: linear-gradient(0deg, rgba(202, 217, 243, 1) 0%, rgba(234, 242, 255, 1) 100%);
 }
 
+@media (min-width: 720px) {
+    .background {
+        padding-top: 55px;
+        padding-bottom: 90px;
+        background: rgb(202, 217, 243);
+        background: linear-gradient(0deg, rgba(202, 217, 243, 1) 0%, rgba(234, 242, 255, 1) 100%);
+    }
+}
+
+.sombra {
+    filter: drop-shadow(0px 40px 64px rgba(6, 16, 88, 0.3));
+}
+
+.borde {
+    border: 1px solid red;
+}
+
+.card-servicio {
+    color: #061058;
+    font-family: 'Poppins', sans-serif;
+    border: 1px solid rgba(240, 0, 0, 0);
+    margin-top: 1em;
+    border-radius: 1em;
+    cursor: pointer;
+    position: relative;
+    z-index: 1;
+    border-radius: 32px 32px 32px 32px;
+}
+
+.title {
+    color: #061058;
+    border-radius: 32px 32px 0 0;
+    background-color: white;
+}
+
+.title-text {
+    font-weight: 600;
+}
+
+
+/* 
 .background-1 {
     background-color: #3178CC;
 }
@@ -23,4 +64,4 @@
 
 .background-5 {
     background-color: #C505D9;
-}
+} */
