--- a/src/app/logged/components/perfil/perfil.component.css
+++ b/src/app/logged/components/perfil/perfil.component.css
@@ -1,33 +1,93 @@
+.background {
+    background: rgb(202, 217, 243);
+    background: linear-gradient(0deg, rgba(202, 217, 243, 1) 0%, rgba(234, 242, 255, 1) 100%);
+}
+
 .borde {
     border: 1px solid red;
 }
 
 .action-color {
-    color: #a30013;
+    color: #FF6384;
 }
 
 .fondo {
     background-color: white;
+    border-radius: 32px;
 }
 
-.caja {
-    font-size: larger;
-}
-
-.caja:focus {
-    outline: none;
-}
-
-.card-login {
+.card-perfil {
+    color: #061058;
+    font-family: 'Poppins', sans-serif;
     border: none;
-    box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.10), 0 2px 10px 0 rgba(0, 0, 0, 0.10);
+    border-radius: 32px;
+    box-shadow: 0px 20px 64px -1px rgba(6, 16, 88, 0.17);
+}
+
+@media (min-width: 720px) {
+    .card-perfil {
+        color: #061058;
+        font-family: 'Poppins', sans-serif;
+        border: none;
+        min-width: 55em;
+        border-radius: 32px;
+        box-shadow: 0px 20px 64px -1px rgba(6, 16, 88, 0.17);
+    }
 }
 
 .foto-perfil {
-    width: 10em;
-    height: 10em;
+    max-width: 10em;
+    max-height: 10em;
     padding: .5em;
     /* border: 1px solid red; */
-    border-radius: 5em;
-    box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.10), 0 2px 10px 0 rgba(0, 0, 0, 0.10);
+    border-radius: 32px;
+    /* box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.10), 0 2px 10px 0 rgba(0, 0, 0, 0.10); */
+}
+
+.boton {
+    font-weight: 600;
+    color: white;
+    background-color: #0000AF;
+    border: none;
+    border-radius: 32px;
+    transition-duration: .3s;
+}
+
+.boton:hover {
+    box-shadow: 0px 10px 64px 0px rgba(6, 16, 88, 0.3);
+}
+
+.cajaTexto {
+    outline: none;
+    box-shadow: none !important;
+    border-width: 0px 0px 2px 0px !important;
+    border-style: solid;
+    border-color: rgba(0, 0, 175, 0) !important;
+    border-radius: 32px;
+    color: #061058;
+    background-color: #EEEEEE;
+    transition: .3s;
+}
+
+.cajaTexto:focus {
+    background-color: #DDDDDD;
+}
+
+.cajaTextoPlano {
+    outline: none;
+    box-shadow: none !important;
+    border-width: 0px 0px 2px 0px !important;
+    border-style: solid;
+    border-color: rgba(0, 0, 175, 0) !important;
+    border-radius: 32px;
+    color: #061058;
+    background-color: #FFFFFF;
+    transition: .3s;
+}
+
+.divider {
+    width: 5em;
+    background-color: #B4B7CC;
+    margin: 0;
+    margin-left: 1em;
 }
