--- a/src/app/logged/components/resumen/resumen.component.css
+++ b/src/app/logged/components/resumen/resumen.component.css
@@ -1,44 +1,45 @@
+.background {
+    background: rgb(240, 240, 246);
+    background: linear-gradient(0deg, rgba(240, 240, 246, 1) 0%, rgba(255, 255, 255, 1) 100%);
+}
+
 .categorias-container {
     display: flex;
     overflow-x: auto;
+    filter: drop-shadow(0px 40px 64px rgba(6, 16, 88, 0.3));
 }
 
-.categorias {
-    flex: 0 0 35%;
-    margin: 2em 0em 2em 2em;
-    border: none;
-    box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.05), 0 2px 10px 0 rgba(0, 0, 0, 0.05);
-    color: white;
-    border-radius: 1em;
-    font-size: larger;
-    font-weight: bold;
+.chip {
+    display: inline-block;
+    height: 32px;
+    font-size: 13px;
+    font-weight: 500;
+    color: #061058;
+    line-height: 32px;
+    padding: 0 12px;
+    border-radius: 16px;
+    background-color: white;
+    margin-bottom: 5px;
+    margin-right: 5px;
+    cursor: pointer;
 }
 
-.ganancias {
-    background-color: #5FBF5E;
-}
-
-.pedidos {
-    background-color: #3178CC;
-}
-
-.adeudos {
-    background-color: #F9625D;
-}
-
-.clientes {
-    background-color: #C505D9;
+.chip:active {
+    outline: none;
+    background-color: #26a69a;
+    color: #fff
 }
 
 .abarca {
     width: 100%;
 }
 
-.activo {
-    background-color: #a30013;
-}
-
-.activo.focus,
-.activo:focus {
-    background-color: white
+@media (min-width: 720px) {
+    .hola {
+        width: 100%;
+        height: auto;
+    }
+    .abarca {
+        width: 50%;
+    }
 }
