--- a/src/app/logged/components/top-bar/top-bar.component.css
+++ b/src/app/logged/components/top-bar/top-bar.component.css
@@ -2,12 +2,12 @@
     position: fixed;
     top: 0;
     width: 100%;
-    height: 4.5em;
-    box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.10), 0 2px 10px 0 rgba(0, 0, 0, 0.10);
-    background-color: rgba(255, 255, 255, 0.9);
+    height: 55px;
+    background-color: #0000AF;
     display: flex;
     overflow-x: auto;
-    z-index: 1;
+    z-index: 3;
+    color: white;
     backdrop-filter: blur(20px);
 }
 
@@ -30,6 +30,7 @@
     border-radius: .75em;
     border: none;
     font-size: 1.5em;
+    color: white;
     background-color: transparent;
 }
 
