--- a/src/app/not-logged/components/login/login.component.css
+++ b/src/app/not-logged/components/login/login.component.css
@@ -1,17 +1,57 @@
+.background {
+    background: rgb(202, 217, 243);
+    background: linear-gradient(0deg, rgba(202, 217, 243, 1) 0%, rgba(234, 242, 255, 1) 100%);
+}
+
 .card-login {
-    max-width: 25rem;
+    color: #061058;
+    font-family: 'Poppins', sans-serif;
+    display: block;
+    max-height: 25em;
+    font-weight: 600;
+    width: 25em;
     border: none;
-    box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.10), 0 2px 10px 0 rgba(0, 0, 0, 0.10);
+    border-radius: 32px 32px 32px 32px;
+    box-shadow: 0px 80px 64px -1px rgba(6, 16, 88, 0.17);
+}
+
+.cajaTexto {
+    outline: none;
+    box-shadow: none !important;
+    border-width: 0px 0px 2px 0px !important;
+    border-style: solid;
+    border-color: rgba(0, 0, 175, 0) !important;
+    border-radius: 32px;
+    color: #061058;
+    background-color: #EEEEEE;
+    transition: .3s;
+}
+
+.cajaTexto:focus {
+    background-color: #DDDDDD;
+}
+
+.title {
+    font-weight: 600;
+    color: #DCF8FF;
 }
 
 .fondo {
-    background-color: white;
+    border-radius: 32px 32px 0 0;
+    background-color: #0000AF;
 }
 
 .button-login {
-    width: 100%;
-    /* background-color: red; */
+    font-weight: 600;
+    width: 50%;
+    background-color: #0000AF;
     border: none;
+    border-radius: 32px;
+    transition-duration: .3s;
+}
+
+.button-login:hover {
+    box-shadow: 0px 10px 64px 0px rgba(6, 16, 88, 0.3);
 }
 
 .borde {
