Pre Actualización a Angular 8
Cambios a la interfaz de perfil

--- a/src/app/logged/components/perfil/perfil.component.html
+++ b/src/app/logged/components/perfil/perfil.component.html
@@ -1,4 +1,3 @@
-<app-top-bar></app-top-bar>
 <div class="row h-100 background" style="margin: auto;">
     <div class="col-md-12 my-auto mt-5">
         <div class="card card-perfil mx-auto my-auto borde">
@@ -6,50 +5,63 @@
                 <img [src]="FotoPerfil" class="foto-perfil animate__animated animate__zoomIn animate__faster" [alt]="FotoPerfilAlt">
             </div>
             <div class="card-body">
-                <div class="row m-1 animate__animated animate__fadeInDown animate__faster animate__delay-1s">
-                    <div class="col-md-4 align-self-center">
-                        Nombre
+                {{formaPerfil.status}}
+                <form [formGroup]="formaPerfil" (ngSubmit)="guardar()" autocomplete="on">
+                    <div class="row m-1 animate__animated animate__fadeInDown animate__faster animate__delay-1s">
+                        <div class="col-md-4 align-self-center">
+                            Nombre
+                        </div>
+                        <div class="col-md-8">
+                            <input #nameInput autocomplete="username" type="text" class="form-control" [ngClass]="Editando ? 'cajaTexto' : 'cajaTextoPlano'" id="nameInput" aria-describedby="name" [value]="Nombre + ' ' + Apellido" formControlName="nombre" [readOnly]="!Editando">
+                        </div>
                     </div>
-                    <div class="col-md-8">
-                        <input #nameInput type="text" [ngClass]="Editando ? 'form-control cajaTexto' : 'form-control cajaTextoPlano'" id="name" aria-describedby="name" [value]="Nombre + ' ' + Apellido" placeholder="Nombre" [readOnly]="!Editando">
+                    <hr align="left" class="divider">
+                    <div class="row m-1 animate__animated animate__fadeInDown animate__faster animate__delay-2s">
+                        <div class="col-md-4 align-self-center">
+                            Correo electrónico
+                        </div>
+                        <div class="col-md-8">
+                            <input #emailInput type="email" class="form-control" [ngClass]="Editando ? 'cajaTexto' : 'cajaTextoPlano'" id="email" aria-describedby="email" [value]="Email" formControlName="email" [readOnly]="!Editando">
+                        </div>
                     </div>
-                </div>
-                <hr align="left" class="divider">
-                <div class="row m-1 animate__animated animate__fadeInDown animate__faster animate__delay-2s">
-                    <div class="col-md-4 align-self-center">
-                        Correo electrónico
+                    <hr align="left" class="divider">
+                    <div class="row m-1 animate__animated animate__fadeInDown animate__faster animate__delay-3s">
+                        <div class="col-md-4 align-self-center">
+                            Teléfono
+                        </div>
+                        <div class="col-md-8">
+                            <input type="text" class="form-control" autocomplete="tel-national" [ngClass]="Editando ? 'cajaTexto' : 'cajaTextoPlano'" id="telefono" aria-describedby="telefono" [value]="Telefono" formControlName="telefono" [readOnly]="!Editando">
+                        </div>
                     </div>
-                    <div class="col-md-8">
-                        <input #emailInput type="email" [ngClass]="Editando ? 'form-control cajaTexto' : 'form-control cajaTextoPlano'" id="email" aria-describedby="email" [value]="Email" placeholder=" Correo electrónico" [readOnly]="!Editando">
+                    <hr align="left" class="divider">
+                    <div *ngIf="Editando" class="row m-1 animate__animated animate__fadeInDown animate__faster">
+                        <div class="col-md-4 align-self-center">
+                            Cambiar contraseña
+                        </div>
+                        <div class="col-md-8">
+                            <input type="password" autocomplete="new-password" class="form-control cajaTexto" id="password" aria-describedby="password" value="">
+                        </div>
                     </div>
-                </div>
-                <hr align="left" class="divider">
-                <div class="row m-1 animate__animated animate__fadeInDown animate__faster animate__delay-3s">
-                    <div class="col-md-4 align-self-center">
-                        Teléfono
+                    <hr *ngIf="Editando" align="left" class="divider">
+                    <div *ngIf="Editando" class="row m-1 animate__animated animate__fadeInDown animate__faster animate__delay-2s">
+                        <div class="col-md-4 align-self-center">
+                            Confirmar contraseña
+                        </div>
+                        <div class="col-md-8">
+                            <input type="password" autocomplete="new-password" class="form-control cajaTexto" id="confirmPassword" aria-describedby="password" value="">
+                        </div>
                     </div>
-                    <div class="col-md-8">
-                        <input type="text" [ngClass]="Editando ? 'form-control cajaTexto' : 'form-control cajaTextoPlano'" id="telefono" aria-describedby="telefono" [value]="Telefono" placeholder="Teléfono" [readOnly]="!Editando">
+                    <br>
+                    <div class="row m-1 animate__animated animate__fadeInDown animate__faster animate__delay-5s">
+                        <div class="col-md-6"></div>
+                        <div class="col-md-3">
+                            <button #botonGuardar class="btn boton btn-block" (click)="guardar()"><i class="fas fa-check" style="color: white"></i> Guardar</button>
+                        </div>
+                        <div class="col-md-3">
+                            <button #botonEditar type="button" class="btn boton btn-block" (click)="editar()"><i class="fas fa-pencil-alt" style="color: white"></i> Editar</button>
+                        </div>
                     </div>
-                </div>
-                <hr align="left" class="divider">
-                <div class="row m-1 animate__animated animate__fadeInDown animate__faster animate__delay-4s">
-                    <div class="col-md-4 align-self-center">
-                        Contraseña
-                    </div>
-                    <div class="col-md-8">
-                        <input type="password" class="form-control-plaintext caja" id="password" aria-describedby="password" readonly value="password" placeholder="Contraseña">
-                    </div>
-                </div>
-                <div class="row m-1 animate__animated animate__fadeInDown animate__faster animate__delay-5s">
-                    <div class="col-md-6"></div>
-                    <div class="col-md-3">
-                        <button class="btn boton btn-block" *ngIf="Editando" (click)="guardar()"><i class="fas fa-check" style="color: white"></i> Guardar</button>
-                    </div>
-                    <div class="col-md-3">
-                        <button class="btn btn-block boton" (click)="editar()"><i class="fas fa-pencil-alt" style="color: white"></i> Editar</button>
-                    </div>
-                </div>
+                </form>
             </div>
         </div>
     </div>
