--- a/src/app/logged/components/perfil/perfil.component.css
+++ b/src/app/logged/components/perfil/perfil.component.css
@@ -1,6 +1,17 @@
 .background {
+    padding-top: 100px;
+    padding-bottom: 800px;
     background: rgb(202, 217, 243);
     background: linear-gradient(0deg, rgba(202, 217, 243, 1) 0%, rgba(234, 242, 255, 1) 100%);
+}
+
+@media (min-width: 720px) {
+    .background {
+        /* padding-top: px; */
+        padding-bottom: 600px;
+        background: rgb(202, 217, 243);
+        background: linear-gradient(0deg, rgba(202, 217, 243, 1) 0%, rgba(234, 242, 255, 1) 100%);
+    }
 }
 
 .borde {
@@ -51,6 +62,15 @@
     border: none;
     border-radius: 32px;
     transition-duration: .3s;
+    margin-top: 1em;
+}
+
+.invisible {
+    display: none;
+}
+
+.visible {
+    display: block;
 }
 
 .boton:hover {
