--- a/src/app/logged/components/bottom-nav/bottom-nav.component.html
+++ b/src/app/logged/components/bottom-nav/bottom-nav.component.html
@@ -13,19 +13,19 @@
           </span>
         <span class="nav__text">Catálogos</span>
     </a>
-    <a [routerLink]="['agregar']" href="logged/agregar" class="nav__link" routerLinkActive="active">
+    <a [routerLink]="['agregar']" class="nav__link" routerLinkActive="active">
         <span class="nav-icon">
             <i class="fas fa-plus-circle" routerLinkActive="nav-icon-active"></i>
           </span>
         <span class="nav__text">Agregar</span>
     </a>
-    <a [routerLink]="['resumen']" href="logged/resumen" class="nav__link" routerLinkActive="active">
+    <a [routerLink]="['resumen']" class="nav__link" routerLinkActive="active">
         <span class="nav-icon">
             <i class="fas fa-chart-bar" routerLinkActive="nav-icon-active"></i>
           </span>
         <span class="nav__text">Resumen</span>
     </a>
-    <a [routerLink]="['perfil']" href="logged/perfil" class="nav__link" routerLinkActive="active">
+    <a [routerLink]="['perfil']" class="nav__link" routerLinkActive="active">
         <span class="nav-icon">
             <i class="fas fa-user" routerLinkActive="nav-icon-active"></i>
           </span>
