--- a/src/app/administrador/components/admin-login/admin-login.component.html
+++ b/src/app/administrador/components/admin-login/admin-login.component.html
@@ -1,33 +1,26 @@
-<div class="container">
-    <div class="card card-login mx-auto">
-        <div class="card-header fondo text-center">
-            <h3>Ingreso</h3>
+<div class="row h-100 background" style="margin: auto;">
+    <app-modal [message]="'El correo o la contraseña son incorrectos'" [showing]="showModal"></app-modal>
+    <div class="card card-login mx-auto my-auto animate__animated animate__fadeIn animate__faster">
+        <div class="card-header fondo text-center border-0">
+            <h2 class="title">Ingreso</h2>
         </div>
         <div class="card-body">
-
             <form [formGroup]="formaLogin" (ngSubmit)="submit()">
                 <div class="col_full">
                     <label for="login-form-username">Correo electrónico:</label>
                     <div class="input-group mb-3">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text"><i class="fas fa-user"></i></span>
-                        </div>
-                        <input type="email" class="form-control" placeholder="Correo electrónico" formControlName="email" [class.is-invalid]="correoNoValido">
+
+                        <input type="email" class="form-control cajaTexto" formControlName="email" [class.is-invalid]="correoNoValido">
                     </div>
-                    <small *ngIf="correoNoValido" class="text-danger">Ingrese un correo electrónico válido</small>
+                    <small class="text-danger" [ngClass]="correoNoValido ? 'visible' : 'invisible'">Ingrese un correo electrónico válido</small>
                 </div>
-                <br>
                 <div class="col_full">
                     <label for="login-form-password">Contraseña:</label>
                     <div class="input-group mb-3">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text"><i class="fas fa-key"></i></span>
-                        </div>
-                        <input type="password" class="form-control" placeholder="Contraseña" formControlName="password" [class.is-invalid]="passwordNoValida">
+                        <input type="password" class="form-control cajaTexto" formControlName="password" [class.is-invalid]="passwordNoValida">
                     </div>
-                    <small *ngIf="passwordNoValida" class="text-danger">Ingrese una contraseña válida</small>
+                    <small class="text-danger" [ngClass]="passwordNoValida ? 'visible' : 'invisible'">Ingrese una contraseña válida</small>
                 </div>
-
                 <div class="text-center">
                     <br>
                 </div>
@@ -38,14 +31,3 @@
         </div>
     </div>
 </div>
-
-
-<pre>
-    Estado: {{formaLogin.valid}}
-    <br>
-    Status: {{formaLogin.status}}
-</pre>
-
-<pre>
-    {{formaLogin.value | json}}
-</pre>
