Cambios al backend
Funcionalidad de manejo de usuarios de manera general.

--- a/src/app/administrador/components/admin-login/admin-login.component.html
+++ b/src/app/administrador/components/admin-login/admin-login.component.html
@@ -2,7 +2,7 @@
     <app-modal [message]="'El correo o la contraseña son incorrectos'" [showing]="showModal"></app-modal>
     <div class="card card-login mx-auto my-auto animate__animated animate__fadeIn animate__faster">
         <div class="card-header fondo text-center border-0">
-            <h2 class="title">Ingreso</h2>
+            <h2 class="title">Ingresar</h2>
         </div>
         <div class="card-body">
             <form [formGroup]="formaLogin" (ngSubmit)="submit()">
