--- a/src/app/logged/components/top-bar/top-bar.component.html
+++ b/src/app/logged/components/top-bar/top-bar.component.html
@@ -1,7 +1,7 @@
 <header class="top-bar">
     <img class="top-img" src="https://www.westernunion.com/content/dam/wu/jm/responsive/send-money-in-person-from-jamaica-resp.png">
-    <h5 class="center">Juanita Perez</h5>
+    <h5 class="center">{{ nombre }}</h5>
     <button class="button-exit">
-        <i class="fas fa-sign-out-alt"></i>
+        <fa-icon [icon]="logoutIcon" (click)="logout()"></fa-icon>
     </button>
 </header>
