--- a/src/app/logged/components/controls/dropdown/dropdown.component.css
+++ b/src/app/logged/components/controls/dropdown/dropdown.component.css
@@ -36,6 +36,7 @@
     position: absolute;
     background-color: white;
     width: 300px;
+    font-family: 'Poppins', sans-serif;
     border-radius: 0em 0em 1em 1em;
     text-align: center;
     z-index: 3;
